src/main/resources/static/css/style.css
/* ... */
.form-inline.form-group {
    margin: 0;
}

.control-label {
    position: absolute;
    text-transform: uppercase;
    font-size: .7rem;
    background-color: #434343;
    left: 12px;
    top: -0.5rem;
    padding: 0 4px;
    margin-bottom: 0;
    z-index: 1;
}

.control-label-title {
    font-size: 1rem;
    top: -0.75rem;
}

.control-label-title input {
    font-weight: bold;
}

.modal-header.bg-danger, .modal-header.bg-dark, .modal-footer.bg-danger, .modal-footer.bg-dark {
    border-color: rgba(255, 255, 255, 0.1);
}

.exodus-title img {
    position: relative;
    bottom: 25px;
}

.exodus-title .exodus-title-text {
    display: inline-block;
}

.exodus-title h1 {
    line-height: 1;
}

.custom-checkbox-lone {
    margin-left: 30px;
}

input[disabled] {
    -moz-appearance:textfield;
}

.toast-container {
    position: fixed;
    bottom: 0;
    left: 0;
    padding: 1rem;
    z-index: 9999;
}

.toast-container .toast {
    padding-bottom: 1rem;
}

.toast .close {
    margin-top: 2px;
}

.toast.hide {
    display: none;
}

.ms-ctn {
    padding: .625rem .75rem;
}

.ms-ctn input {
    background: none;
}

.ms-ctn-focus {
    background: white !important;
}


/*
    Responsive Utilities
 */

@media (min-width: 576px) {
    .border-sm-top {
        border-top: 1px solid #e3e7eb !important;
    }
    .border-sm-right {
        border-right: 1px solid #e3e7eb !important;
    }
    .border-sm-bottom {
        border-bottom: 1px solid #e3e7eb !important;
    }
    .border-sm-left {
        border-left: 1px solid #e3e7eb !important;
    }
    .border-sm-top-0 {
        border-top: 0 !important;
    }
    .border-sm-right-0 {
        border-right: 0 !important;
    }
    .border-sm-bottom-0 {
        border-bottom: 0 !important;
    }
    .border-sm-left-0 {
        border-left: 0 !important;
    }
    .border-sm-x {
        border-left: 1px solid #e3e7eb !important;
        border-right: 1px solid #e3e7eb !important;
    }
    .border-sm-y {
        border-top: 1px solid #e3e7eb !important;
        border-bottom: 1px solid #e3e7eb !important;
    }
    .border-sm {
        border-top: 1px solid #e3e7eb !important;
        border-bottom: 1px solid #e3e7eb !important;
        border-left: 1px solid #e3e7eb !important;
        border-right: 1px solid #e3e7eb !important;
    }
    .border-sm-0 {
        border-top: 0 !important;
        border-bottom: 0 !important;
        border-left: 0 !important;
        border-right: 0 !important;
    }
}

@media (min-width: 768px) {
    .border-md-top {
        border-top: 1px solid #e3e7eb !important;
    }
    .border-md-right {
        border-right: 1px solid #e3e7eb !important;
    }
    .border-md-bottom {
        border-bottom: 1px solid #e3e7eb !important;
    }
    .border-md-left {
        border-left: 1px solid #e3e7eb !important;
    }
    .border-md-top-0 {
        border-top: 0 !important;
    }
    .border-md-right-0 {
        border-right: 0 !important;
    }
    .border-md-bottom-0 {
        border-bottom: 0 !important;
    }
    .border-md-left-0 {
        border-left: 0 !important;
    }
    .border-md-x {
        border-left: 1px solid #e3e7eb !important;
        border-right: 1px solid #e3e7eb !important;
    }
    .border-md-y {
        border-top: 1px solid #e3e7eb !important;
        border-bottom: 1px solid #e3e7eb !important;
    }
    .border-md {
        border-top: 1px solid #e3e7eb !important;
        border-bottom: 1px solid #e3e7eb !important;
        border-left: 1px solid #e3e7eb !important;
        border-right: 1px solid #e3e7eb !important;
    }
    .border-md-0 {
        border-top: 0 !important;
        border-bottom: 0 !important;
        border-left: 0 !important;
        border-right: 0 !important;
    }
}

@media (min-width: 992px) {
    .border-lg-top {
        border-top: 1px solid #e3e7eb !important;
    }
    .border-lg-right {
        border-right: 1px solid #e3e7eb !important;
    }
    .border-lg-bottom {
        border-bottom: 1px solid #e3e7eb !important;
    }
    .border-lg-left {
        border-left: 1px solid #e3e7eb !important;
    }
    .border-lg-top-0 {
        border-top: 0 !important;
    }
    .border-lg-right-0 {
        border-right: 0 !important;
    }
    .border-lg-bottom-0 {
        border-bottom: 0 !important;
    }
    .border-lg-left-0 {
        border-left: 0 !important;
    }
    .border-lg-x {
        border-left: 1px solid #e3e7eb !important;
        border-right: 1px solid #e3e7eb !important;
    }
    .border-lg-y {
        border-top: 1px solid #e3e7eb !important;
        border-bottom: 1px solid #e3e7eb !important;
    }
    .border-lg {
        border-top: 1px solid #e3e7eb !important;
        border-bottom: 1px solid #e3e7eb !important;
        border-left: 1px solid #e3e7eb !important;
        border-right: 1px solid #e3e7eb !important;
    }
    .border-lg-0 {
        border-top: 0 !important;
        border-bottom: 0 !important;
        border-left: 0 !important;
        border-right: 0 !important;
    }
}
/* ... */

